--- a/package.json
+++ b/package.json
@@ -14,24 +14,20 @@
   "dependencies": {
     "@types/pg": "^8.10.4",
     "ajv": "^8.11.2",
+    "body-parse": "^0.1.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "koa": "^2.14.1",
-    "koa-bodyparser": "^4.3.0",
-    "koa-compress": "^5.1.0",
-    "koa-json": "^2.0.2",
-    "koa-router": "^12.0.0",
     "kysely": "0.23.3",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.4",
     "@types/chai": "^4.3.4",
+    "@types/compression": "^1.7.4",
+    "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.0",
-    "@types/koa": "^2.13.5",
-    "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-compress": "^4.0.3",
-    "@types/koa-json": "^2.0.20",
-    "@types/koa-router": "^7.4.4",
     "@types/mocha": "^10.0.1",
     "@types/node": "^16.11.9",
     "axios": "^1.2.2",
