--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist",
     "strict": true,
     "noImplicitAny": true,
+    "esModuleInterop": true,
   },
   "include": ["src/**/*"],
 }
